[package]
name = "molcajete"
version = "0.1.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "continuous integration framework"
documentation = "https://github.com/molcajete/molcajete"
homepage = "https://github.com/molcajete/molcajete"
repository = "https://github.com/molcajete/molcajete"
readme = "README.md"
keywords = ["git", "build", "ci", "test", "make", "molcajete"]
categories = ["command-line-utilities", "os"]
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "molcajete/molcajete", branch = "master" }

[dependencies]
clap = "2.33"
